--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ https://templatemo.com/tm-536-dream-pulse
             <div
               class="parallax-window"
               data-parallax="scroll"
-              data-image-src="file:///D:/WEBSITE%20DARIEL/Foto/Background.JPG">
+              data-image-src="./img/background.JPG">
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
                     <div class="tm-bg-white-transparent tm-intro">
@@ -148,81 +148,81 @@ https://templatemo.com/tm-536-dream-pulse
                           <div class="tm-gallery">
                             <div class="tm-gallery-item">                        
                               <figure class="effect-bubba">
-                                <img src="file:///D:/WEBSITE%20DARIEL/Foto/00fabca6a768173e658d096541a76ddd.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="./img/00fabca6a768173e658d096541a76ddd.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Kampus <span>D</span></h2>
                                   <p>GUNADARMA</p>
-                                  <a href="file:///D:/WEBSITE%20DARIEL/Foto/00fabca6a768173e658d096541a76ddd.jpg">View more</a>
+                                  <a href="./img/00fabca6a768173e658d096541a76ddd.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="file:///D:/WEBSITE%20DARIEL/Foto/gedung-ug-2-5edf9bddd541df2641082975.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="./img/gedung-ug-2-5edf9bddd541df2641082975.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Kampus <span>E</span></h2>
                                   <p>GUNADARMA</p>
-                                  <a href="file:///D:/WEBSITE%20DARIEL/Foto/gedung-ug-2-5edf9bddd541df2641082975.jpg">View more</a>
+                                  <a href="./img/gedung-ug-2-5edf9bddd541df2641082975.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="file:///D:/WEBSITE%20DARIEL/Foto/Plaza%20Kampus%20G.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="./img/Plaza Kampus G.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Kampus <span>G</span></h2>
                                   <p>GUNADARMA</p>
-                                  <a href="file:///D:/WEBSITE%20DARIEL/Foto/Plaza%20Kampus%20G.jpg">View more</a>
+                                  <a href="./img/Plaza Kampus G.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="file:///D:/WEBSITE%20DARIEL/Foto/Kmpus%20F.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="./img/Kmpus F.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Kampus <span>F 1,2,3</span></h2>
                                   <p>GUNADARMA</p>
-                                  <a href="file:///D:/WEBSITE%20DARIEL/Foto/Kmpus%20F.jpg">View more</a>
+                                  <a href="./img/Kmpus F.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="file:///D:/WEBSITE%20DARIEL/Foto/KAMPUS%20H%202.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="./img/KAMPUS H 2.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Kampus  <span>H</span></h2>
                                   <p>GUNADARMA</p>
-                                  <a href="file:///D:/WEBSITE%20DARIEL/Foto/KAMPUS%20H%202.jpg">View more</a>
+                                  <a href="./img/KAMPUS H 2.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="file:///D:/WEBSITE%20DARIEL/Foto/index.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="./img/index.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Kampus <span>L</span></h2>
                                   <p>GUNADARMA</p>
-                                  <a href="file:///D:/WEBSITE%20DARIEL/Foto/index.jpg">View more</a>
+                                  <a href="./img/index.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="file:///D:/WEBSITE%20DARIEL/Foto/92308051_sisi-lain-kampus-j.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="./img/92308051_sisi-lain-kampus-j.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Kampus <span>J</span></h2>
                                   <p>GUNADARMA</p>
-                                  <a href="file:///D:/WEBSITE%20DARIEL/Foto/92308051_sisi-lain-kampus-j.jpg">View more</a>
+                                  <a href="./img/92308051_sisi-lain-kampus-j.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="file:///D:/WEBSITE%20DARIEL/Foto/karawaci%20ug.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="./img/karawaci ug.jpg" alt="Our Work Image" class="img-fluid">
                                 <figcaption>
                                   <h2>Kampus <span>K</span></h2>
                                   <p>GUNADARMA</p>
-                                  <a href="file:///D:/WEBSITE%20DARIEL/Foto/karawaci%20ug.jpg">View more</a>
+                                  <a href="./img/karawaci ug.jpg">View more</a>
                                 </figcaption>
                               </figure>
                             </div>
@@ -248,42 +248,42 @@ https://templatemo.com/tm-536-dream-pulse
                       <div class="row tm-clients-images">
                         <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6 tm-img-wrap">
                           <a href="https://baak.gunadarma.ac.id/">
-                            <img src="file:///D:/WEBSITE%20DARIEL/Foto/ug-baak.png" alt="Client Image" class="img-fluid tm-client-img" />
+                            <img src="./img/ug-baak.png" alt="Client Image" class="img-fluid tm-client-img" />
                           </a>                          
                         </div>
                         <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6 tm-img-wrap">
                           <a href="https://v-class.gunadarma.ac.id/">
-                            <img src="file:///D:/WEBSITE%20DARIEL/Foto/virtual%20class%20ug.jpg" alt="Client Image" class="img-fluid tm-client-img" />
+                            <img src="./img/virtual class ug.jpg" alt="Client Image" class="img-fluid tm-client-img" />
                           </a>                          
                         </div>
                         <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6 tm-img-wrap">
                           <a href="https://ilab.gunadarma.ac.id/">
-                            <img src="file:///D:/WEBSITE%20DARIEL/Foto/ILAB%20UG.jpg" alt="Client Image" class="img-fluid tm-client-img" />
+                            <img src="./img/ILAB UG.jpg" alt="Client Image" class="img-fluid tm-client-img" />
                           </a>                          
                         </div>
                         <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6 tm-img-wrap">
                           <a href="https://studentsite.gunadarma.ac.id/">
-                            <img src="file:///D:/WEBSITE%20DARIEL/Foto/ug-studentsite.png" alt="Client Image" class="img-fluid tm-client-img" />
+                            <img src="./img/ug-studentsite.png" alt="Client Image" class="img-fluid tm-client-img" />
                           </a>                          
                         </div>
                         <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6 tm-img-wrap">
                             <a href="https://staffsite.gunadarma.ac.id/">
-                              <img src="file:///D:/WEBSITE%20DARIEL/Foto/ug-staffsite.png" alt="Client Image" class="img-fluid tm-client-img" />
+                              <img src="./img/ug-staffsite.png" alt="Client Image" class="img-fluid tm-client-img" />
                             </a>                          
                           </div>
                           <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6 tm-img-wrap">
                             <a href="https://kemahasiswaan.gunadarma.ac.id/">
-                              <img src="file:///D:/WEBSITE%20DARIEL/Foto/Kemahasiswaan%20UG.png" alt="Client Image" class="img-fluid tm-client-img" />
+                              <img src="./img/Kemahasiswaan UG.png" alt="Client Image" class="img-fluid tm-client-img" />
                             </a>                          
                           </div>
                           <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6 tm-img-wrap">
                             <a href="https://praktikum.gunadarma.ac.id/">
-                              <img src="file:///D:/WEBSITE%20DARIEL/Foto/Praktikum%20ug.jpg" alt="Client Image" class="img-fluid tm-client-img" />
+                              <img src="./img/Kemahasiswaan UG.png" alt="Client Image" class="img-fluid tm-client-img" />
                             </a>                          
                           </div>
                           <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6 tm-img-wrap">
                             <a href="https://library.gunadarma.ac.id/">
-                              <img src="file:///D:/WEBSITE%20DARIEL/Foto/library%20ug.jpg" alt="Client Image" class="img-fluid tm-client-img" />
+                              <img src="./img/library ug.jpg" alt="Client Image" class="img-fluid tm-client-img" />
                             </a>                          
                           </div>
                       </div>
